# orin-nx-camera-app

./: .gitignore  CLAUDE.md  DESIGN.md  README.md
cmake/: GitVersion.cmake
common/proto/: Protocol.h
common/secure/: SecureHandshake.cpp  SecureHandshake.h  SecureUsbContext.cpp  SecureUsbContext.h  SecureWire.cpp  SecureWire.h
common/secure/test/: handshake_trust_check.cpp
docs/: DESIGN.md  EMBEDDED.md  HOST-UI.md  ISP-TUNING.md  PROTOCOL.md  TRANSPORT-ARCHITECTURE.md  YOCTO.md
embedded/: CMakeLists.txt  README.md  oe-logs  oe-workdir
embedded/config/: camera-streamer.conf  test-videotestsrc.conf
embedded/src/: config.cpp  config.h  control_server.cpp  control_server.h  discovery_server.cpp  discovery_server.h  isp_file.cpp  isp_file.h  main.cpp  net_util.cpp  net_util.h  rtsp_server.cpp  rtsp_server.h  v4l2_ctrl.cpp  v4l2_ctrl.h
embedded/src/camera/: Main.cpp
embedded/src/camera/base/: Expected.h  File.h  FileUtil.h  ScopeGuard.h  Synchronized.h  Unit.h
embedded/src/camera/base/io/async/: AsyncServerSocket.cpp  AsyncServerSocket.h  EventBase.h  SSLContext.cpp  SSLContext.h
embedded/src/camera/base/io/async/test/: IoCheck.cpp  SslCheck.cpp
embedded/src/camera/base/logging/: xlog.h
embedded/src/camera/base/test/: base_check.cpp
embedded/src/camera/config/: Config.h  ConfigLoader.cpp  ConfigLoader.h
embedded/src/camera/control/: ControlContext.h  ControlHandler.h  ControlRegistry.cpp  ControlRegistry.h  ControlServer.cpp  ControlServer.h  JsonUtil.cpp  JsonUtil.h
embedded/src/camera/control/handlers/: ExposureHandler.cpp  ExposureHandler.h  IspHandler.cpp  IspHandler.h  MetricsHandler.cpp  MetricsHandler.h  RegisterHandlers.cpp  RegisterHandlers.h  SnapshotHandler.cpp  SnapshotHandler.h  StatusHandler.cpp  StatusHandler.h  SystemHandlers.cpp  SystemHandlers.h  TriggerHandler.cpp  TriggerHandler.h  UpdateHandler.cpp  UpdateHandler.h  V4l2ControlHandler.cpp  V4l2ControlHandler.h  ZoomHandler.cpp  ZoomHandler.h
embedded/src/camera/core/: Application.cpp  Application.h  StreamController.h  UsbAwareStreamController.h  Watchdog.cpp  Watchdog.h
embedded/src/camera/detect/: FaceDetector.cpp  FaceDetector.h  MetaSink.h  Snapshot.cpp  Snapshot.h
embedded/src/camera/detect/test/: snapshot_check.cpp
embedded/src/camera/discovery/: DiscoveryServer.cpp  DiscoveryServer.h
embedded/src/camera/folly/: Expected.h  File.h  FileUtil.h  ScopeGuard.h  Synchronized.h  Unit.h
embedded/src/camera/folly/io/async/: AsyncServerSocket.cpp  AsyncServerSocket.h  EventBase.h  SSLContext.cpp  SSLContext.h
embedded/src/camera/folly/io/async/test/: IoCheck.cpp  SslCheck.cpp
embedded/src/camera/folly/logging/: xlog.h
embedded/src/camera/folly/test/: folly_check.cpp
embedded/src/camera/lib/net/: NetworkResolver.cpp  NetworkResolver.h
embedded/src/camera/lib/sys/: ResourceMonitor.cpp  ResourceMonitor.h
embedded/src/camera/lib/sys/test/: resource_monitor_check.cpp
embedded/src/camera/lib/v4l2/: V4l2Device.cpp  V4l2Device.h  V4l2Factory.h
embedded/src/camera/media/: Bin.cpp  Bin.h  CameraPipeline.cpp  CameraPipeline.h  Element.cpp  Element.h  ElementFactory.h  Pad.h  Pipeline.cpp  Pipeline.h  Tee.h
embedded/src/camera/media/test/: camera_pipeline_check.cpp  media_check.cpp
embedded/src/camera/pipeline/: ArgusSource.cpp  ArgusSource.h  CameraSource.h  PipelineBuilder.cpp  PipelineBuilder.h  SourceFactory.cpp  SourceFactory.h  TestSource.cpp  TestSource.h  V4l2Source.cpp  V4l2Source.h
embedded/src/camera/rtsp/: MountController.cpp  MountController.h  RtspServer.cpp  RtspServer.h
embedded/src/camera/secure/: FfsGadget.cpp  FfsGadget.h  KeySchedule.cpp  KeySchedule.h  SecureRecord.cpp  SecureRecord.h  SecureUsbServer.cpp  SecureUsbServer.h
embedded/src/camera/update/: SwupdateClient.cpp  SwupdateClient.h  UpdateServer.cpp  UpdateServer.h
embedded/src/config/: config.h  config_loader.cpp  config_loader.h
embedded/src/control/: control_context.h  control_handler.h  control_registry.cpp  control_registry.h  control_server.cpp  control_server.h  json_util.cpp  json_util.h
embedded/src/control/handlers/: exposure_handler.cpp  exposure_handler.h  isp_handler.cpp  isp_handler.h  register_handlers.cpp  register_handlers.h  status_handler.cpp  status_handler.h  system_handlers.cpp  system_handlers.h  trigger_handler.cpp  trigger_handler.h  update_handler.cpp  update_handler.h  v4l2_control_handler.cpp  v4l2_control_handler.h  zoom_handler.cpp  zoom_handler.h
embedded/src/core/: application.cpp  application.h  stream_controller.h
embedded/src/discovery/: discovery_server.cpp  discovery_server.h
embedded/src/net/: network_resolver.cpp  network_resolver.h
embedded/src/pipeline/: argus_source.cpp  argus_source.h  camera_source.h  pipeline_builder.cpp  pipeline_builder.h  source_factory.cpp  source_factory.h  test_source.cpp  test_source.h  v4l2_source.cpp  v4l2_source.h
embedded/src/rtsp/: mount_controller.cpp  mount_controller.h  rtsp_server.cpp  rtsp_server.h
embedded/src/update/: swupdate_client.cpp  swupdate_client.h  update_server.cpp  update_server.h
embedded/src/v4l2/: v4l2_device.cpp  v4l2_device.h  v4l2_factory.h
embedded/systemd/: camera-streamer-gencert.service  camera-streamer.service
host-ui/: 70-camera-secure-usb.rules  CMakeLists.txt  README.md  build.sh  cameracontrols.cpp  cameracontrols.h  collapsiblesection.cpp  collapsiblesection.h  controlclient.cpp  controlclient.h  controlpanel.cpp  controlpanel.h  discoveryclient.cpp  discoveryclient.h  faceoverlay.cpp  faceoverlay.h  frameview.cpp  frameview.h  main.cpp  mainwindow.cpp  mainwindow.h  secureusbbridge.cpp  secureusbbridge.h  theme.cpp  theme.h  updateclient.cpp  updateclient.h  updatewidget.cpp  updatewidget.h  videopane.cpp  videopane.h  whitebalancecalibrator.cpp  whitebalancecalibrator.h
host-ui/scripts/: preview.sh
proto/: PROTOCOL.md
scripts/: provision-device-cert.sh
tools/isp-tuning/: README.md  compute_ccm.py  raw_stats.py  template_camera_overrides.isp
yocto/: README.md
yocto/meta-vc-camera/conf/: layer.conf
(+38 files in other folders)
